--- a/src/index.html
+++ b/src/index.html
@@ -24,17 +24,17 @@
   		
 		<div id="app">
 			<header>
-				<h1>Hed</h1>
-				<p class="subhead">tk</p>
+				<h1>DANGEROUS WATERS</h1>
+				<!-- <p class="subhead">tk</p> -->
 			</header>
 			<div class="graphic-container">
-				<iframe src='https://flo.uri.sh/visualisation/5258140/embed' title='Interactive or visual content' frameborder='0' scrolling='no' style='width:100%;height:375px;' sandbox='allow-same-origin allow-forms allow-scripts allow-downloads allow-popups allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation'></iframe>
-				<iframe src='https://flo.uri.sh/visualisation/5258446/embed' title='Interactive or visual content' frameborder='0' scrolling='no' style='width:100%;height:375px;' sandbox='allow-same-origin allow-forms allow-scripts allow-downloads allow-popups allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation'></iframe>
+				<iframe src='https://flo.uri.sh/visualisation/5801609/embed' title='Interactive or visual content' frameborder='0' scrolling='no' style='width:100%;height:400px;' sandbox='allow-same-origin allow-forms allow-scripts allow-downloads allow-popups allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation'></iframe>
+				<iframe src='https://flo.uri.sh/visualisation/5801387/embed' title='Interactive or visual content' frameborder='0' scrolling='no' style='width:100%;height:380px;' sandbox='allow-same-origin allow-forms allow-scripts allow-downloads allow-popups allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation'></iframe>
 			</div>
 
 			<footer>
-				<p class="note">NOTE: tk</p>
-				<p class="source">Source: <a href="https://vancouversun.com" target="_blank">tk</a></p>
+				<p class="note">NOTE: “Other” includes accidents for which there were a total of five events or less over the five year period. Data is from 2016 through March, 2021</p>
+				<p class="source">Source: Transportation Safety Board</p>
 				<div style='width:100%!;margin-top:4px!important;text-align:right!important;'><a class='flourish-credit' href='https://public.flourish.studio/visualisation/5258446/?utm_source=embed&utm_campaign=visualisation/5258446' target='_top' style='text-decoration:none!important'><img alt='Made with Flourish' src='https://public.flourish.studio/resources/made_with_flourish.svg' style='width:105px!important;height:16px!important;border:none!important;margin:0!important;'> </a></div>
 			</footer>
 		</div>
