updated page title

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   		<!-- Place favicon.ico in the root directory -->
 
   		<meta name="theme-color" content="#fafafa">
-  		<title>Flourish embed template</title>
+  		<title>Dangerous waters: Tugboat safety in B.C.</title>
 	</head>
 
 	<body>
